--- a/docs/memory.adoc
+++ b/docs/memory.adoc
@@ -67,6 +67,7 @@ output wire [3:0]                         error_code,  // Specific error classif
 The memory controller implements comprehensive interface standardization with advanced features:
 
 **Interface Capabilities:**
+
 - **36-bit Ternary Addressing**: Native ternary address encoding for optimal balanced ternary operations
 - **288-bit Cache Line Support**: Efficient cache line transfers (8 × 36-bit words per line)
 - **Burst Transfer Optimization**: Up to 16-beat bursts for high-bandwidth operations
@@ -74,6 +75,7 @@ The memory controller implements comprehensive interface standardization with ad
 - **Performance Monitoring**: Real-time bandwidth utilization and latency tracking
 
 **Memory Banking and Interleaving:**
+
 - **3-Way Interleaving**: Optimal for ternary operations (Bank selection via addr[1:0])
 - **Bank Configuration**: Fixed 3-bank configuration optimized for ternary architecture
 - **Ternary Alignment**: Memory addresses aligned to 3-byte boundaries for efficiency
@@ -101,12 +103,14 @@ output wire [1:0]                   bank_select; // Bank selection (00, 01, 10 f
 The cache controller implements a sophisticated MESI (Modified, Exclusive, Shared, Invalid) coherency protocol:
 
 **Cache States:**
+
 - **Modified (M)**: Cache line is dirty and exclusively owned
 - **Exclusive (E)**: Cache line is clean and exclusively owned  
 - **Shared (S)**: Cache line is clean and may be shared with other caches
 - **Invalid (I)**: Cache line is not valid
 
 **Cache Configuration:**
+
 - **L1 Instruction Cache**: 8KB, direct-mapped, 128-bit cache lines
 - **L1 Data Cache**: 8KB, 2-way set associative, 256-bit cache lines  
 - **Unified L2 Cache**: 256KB, 4-way associative, 256-bit cache lines
@@ -114,6 +118,7 @@ The cache controller implements a sophisticated MESI (Modified, Exclusive, Share
 - **Replacement Policy**: LRU (L1 D-Cache, L2), direct-mapped (L1 I-Cache)
 
 **Advanced Cache Features:**
+
 - **Write-Through/Write-Back**: Configurable write policies per cache level
 - **Cache Locking**: Critical code/data locking capability
 - **Performance Counters**: Hit/miss ratios, access patterns, bandwidth utilization
@@ -220,6 +225,7 @@ flowchart TB
 ==== L1 Instruction Cache Specification
 
 **Cache Organization:**
+
 - **Size:** 8KB total (7KB regular + 1KB microcode dedicated)
 - **Line Size:** 128 bits (4 VLIW instructions or 16 bytes)
 - **Associativity:** Direct-mapped (1-way)
@@ -227,26 +233,30 @@ flowchart TB
 - **Address Mapping:** Physical address bits [12:4] select set
 
 **Cache Structure:**
+
 - **Tag Array:** 512 entries × 18 bits (16-bit tag + 1 valid + 1 parity)
 - **Data Array:** 512 entries × 128 bits (VLIW instruction width)
 - **Hit Detection:** Single cycle tag comparison
 - **Access Latency:** 1 cycle for hit, 8 cycles for miss
 
 **Replacement Policy:**
+
 - **Algorithm:** Direct-mapped (no replacement choice)
 - **Allocation:** Read allocation on miss
 - **Write Policy:** Write-through to L2/Memory
 - **Prefetching:** Sequential prefetch + taken branch target prefetch
 
 **Performance Characteristics:**
+
 - **Hit Rate:** >95% for typical workloads
 - **Miss Penalty:** 8 cycles to main memory
 - **Throughput:** 1 instruction fetch per cycle on hit
-- **Power:** 2mW active, 0.2mW standby
+- **Power:** 2 mW active, 0.2 mW standby
 
 ==== L1 Data Cache Specification
 
 **Cache Organization:**
+
 - **Size:** 8KB
 - **Line Size:** 256 bits (32 bytes, ternary-aligned)
 - **Associativity:** 2-way set-associative
@@ -254,24 +264,28 @@ flowchart TB
 - **Address Mapping:** Physical address bits [12:5] select set
 
 **Cache Structure:**
+
 - **Tag Array:** 256 entries × 20 bits per way (17-bit tag + 1 valid + 1 dirty + 1 parity)
 - **Data Array:** 256 entries × 256 bits per way
 - **LRU Array:** 128 entries × 2 bits (per set)
 - **Access Latency:** 1 cycle for hit, 8-12 cycles for miss
 
 **Replacement Policy:**
+
 - **Algorithm:** Least Recently Used (LRU) per set
 - **Allocation:** Write-allocate on write miss, read-allocate on read miss
 - **Write Policy:** Write-back with dirty bit tracking
 - **Victim Buffer:** 4-entry victim cache for recently evicted lines
 
 **Coherency Protocol:**
+
 - **Protocol:** Modified MESI (MOESI without Owned state)
 - **States:** Modified, Exclusive, Shared, Invalid
 - **Snooping:** Bus snooping for external coherency
 - **Invalidation:** Precise invalidation with acknowledgment
 
 **Write-Back Buffer:**
+
 - **Depth:** 4 entries for pending write-backs
 - **Merging:** Write combining for same cache line
 - **Priority:** Write-back has lower priority than demand requests
@@ -279,18 +293,21 @@ flowchart TB
 ==== Cache Performance Metrics
 
 **Hit Rate Analysis:**
+
 - **Instruction Cache Hit Rate:** 96-98% typical, >95% guaranteed
 - **Data Cache Hit Rate:** 93-96% typical, >90% guaranteed
 - **Combined Hit Rate:** 95% average across typical workloads
 - **Miss Rate Breakdown:** 60% compulsory, 25% capacity, 15% conflict
 
 **Latency Breakdown:**
+
 - **Cache Hit:** 1 cycle (10ns @ 100MHz)
-- **Cache Miss to RAM:** 8 cycles (80ns @ 100MHz)
-- **Cache Miss to Flash:** 12 cycles (120ns @ 100MHz)
-- **Write-back Latency:** 4 cycles (40ns @ 100MHz)
+- **Cache Miss to RAM:** 8 cycles (80 ns @ 100 MHz)
+- **Cache Miss to Flash:** 12 cycles (120 ns @ 100 MHz)
+- **Write-back Latency:** 4 cycles (40 ns @ 100 MHz)
 
 **Bandwidth Utilization:**
+
 - **Peak Read Bandwidth:** 1.6GB/s (128-bit × 100MHz)
 - **Peak Write Bandwidth:** 3.2GB/s (256-bit × 100MHz)
 - **Sustained Bandwidth:** 85% of peak under typical load
@@ -302,6 +319,7 @@ flowchart TB
 The VTX1 SoC implements a unified 32-bit address space with clear separation between memory regions and peripheral address spaces to prevent conflicts.
 
 **Memory Hierarchy:**
+
    - L1 Instruction Cache: 8KB (hardware-transparent)
    - L1 Data Cache: 8KB (hardware-transparent) 
    - Internal RAM: 144KB
@@ -339,6 +357,7 @@ The VTX1 SoC implements a unified 32-bit address space with clear separation bet
 |===
 
 **Address Space Conflict Resolution:**
+
 - L1 Caches are **hardware-transparent** and do not consume address space
 - Cache control is performed through dedicated instructions (CACHE, FLUSH, MEMBAR)
 - No memory-mapped cache control registers exist
@@ -357,7 +376,7 @@ The VTX1 SoC implements a unified 32-bit address space with clear separation bet
 - RAM Read: 2 cycles
 - RAM Write: 1 cycle
 - Flash Read: 3 cycles
-- Flash Write: 100μs
+- Flash Write: 100 μs
 - Burst Transfer: 4 cycles
 - Bank Switching: 1 cycle
 
@@ -404,19 +423,21 @@ The VTX1 SoC implements a unified 32-bit address space with clear separation bet
 
 ==== Power Modes
 
-**Active Mode**
+
 - Full performance
 - All banks active
 - Normal power consumption
 - Zero-wait state access
 
 **Sleep Mode**
+
 - Clock gating
 - Data retention
 - Reduced power
 - Wake-up latency: 4 cycles
 
 **Deep Sleep Mode**
+
 - Power gating
 - State retention
 - Minimum power
@@ -484,6 +505,7 @@ flowchart TB
 ....
 
 **VTX1 Memory Specifications:**
+
 - **Type:** VTX1 Ternary SRAM (3-bank configuration)
 - **Data Width:** 36-bit ternary words
 - **Total Capacity:** 144KB (3 × 48KB banks)
@@ -492,7 +514,9 @@ flowchart TB
 - **Access Pattern:** Ternary-aligned interleaved access
 
 **Timing Parameters:**
-```
+
+[source]
+----
 Access Time: 10ns (single cycle @ 100MHz)
 Bank Switch Time: 1 cycle
 Ternary Word Access: 1 cycle
@@ -500,7 +524,7 @@ Cache Line Fill: 8 cycles (288-bit / 36-bit = 8 words)
 Refresh: Not required (SRAM)
 Standby Current: <1mA per bank
 Active Current: 15mA per bank
-```
+----
 
 **3-Bank Management:**
 - **Bank Selection:** Based on address bits [1:0] → bank mapping (00→Bank0, 01→Bank1, 10→Bank2)
@@ -519,23 +543,28 @@ Active Current: 15mA per bank
 The internal Flash controller provides high-performance access to the 432KB embedded Flash memory with error correction and wear leveling.
 
 **Flash Controller Features:**
+
 - **Interface:** 128-bit parallel Flash interface
-- **Access Time:** 25ns random access, 10ns sequential
+- **Access Time:** 25 ns random access, 10 ns sequential
 - **Error Correction:** Single Error Correction, Double Error Detection (SEC-DED)
 - **Wear Leveling:** Dynamic wear leveling with >100K erase cycles
 - **Bad Block Management:** Hardware-assisted bad block replacement
 
 **Flash Memory Organization:**
-```
+
+[source]
+----
 Total Capacity: 432KB (54 blocks × 8KB each)
 Block Size: 8KB (32 pages × 256 bytes)
 Page Size: 256 bytes (minimal write unit)
 Sector Size: 4KB (erase unit)
 Spare Area: 16 bytes per page (ECC + metadata)
-```
+----
 
 **Flash Timing Characteristics:**
-```
+
+[source]
+----
 Random Read: 25ns
 Sequential Read: 10ns (after first access)
 Page Program: 200μs typical, 700μs maximum
@@ -543,9 +572,10 @@ Block Erase: 1.5ms typical, 3ms maximum
 Chip Erase: 100ms typical
 Data Retention: 20 years minimum
 Endurance: 100K program/erase cycles minimum
-```
+----
 
 **Error Correction Implementation:**
+
 - **ECC Algorithm:** BCH with 8-bit correction capability
 - **Syndrome Calculation:** Hardware-accelerated syndrome generation
 - **Error Location:** Hardware polynomial root finding
@@ -648,12 +678,14 @@ output wire [3:0]  dma_error_code;         // Specific error code
 ==== Advanced Flash Features
 
 **Wear Leveling Implementation:**
+
 - **Algorithm:** Dynamic wear leveling with background garbage collection
 - **Block Management:** Hardware-assisted bad block detection and replacement
 - **Endurance:** 100,000 program/erase cycles minimum per block
 - **Data Retention:** 20+ years at 85°C junction temperature
 
 **Error Correction Enhanced Implementation:**
+
 - **Primary ECC:** BCH (8,4) code with 8-bit correction capability
 - **Syndrome Calculation:** 2-cycle hardware syndrome generation
 - **Error Correction Latency:** 
@@ -662,13 +694,14 @@ output wire [3:0]  dma_error_code;         // Specific error code
   - Uncorrectable errors: 12 cycles detection + error reporting
 
 **Flash Controller Performance Metrics:**
+
 * Sequential Read Performance: 45MB/s sustained
 * Random Read Performance: 35MB/s average
 * Program Performance: 12MB/s (page-based)
 * Erase Performance: 8MB/s (block-based)
-* Read Latency: 25ns first access, 10ns sequential
-* Program Latency: 200μs typical, 700μs worst-case
-* Erase Latency: 1.5ms typical, 3ms worst-case
+* Read Latency: 25 ns first access, 10 ns sequential
+* Program Latency: 200 μs typical, 700 μs worst-case
+* Erase Latency: 1.5 ms typical, 3 ms worst-case
 
 === Memory System Performance Analysis
 ==== Bandwidth Utilization
@@ -687,6 +720,7 @@ output wire [3:0]  dma_error_code;         // Specific error code
 |===
 
 **Performance Optimization Recommendations:**
+
 * **Cache Line Prefetching:** Implement intelligent prefetch for sequential access patterns
 * **Memory Interleaving:** Utilize 3-way bank interleaving for optimal ternary alignment
 * **Burst Optimization:** Prioritize burst transfers over single-word operations
@@ -696,12 +730,14 @@ output wire [3:0]  dma_error_code;         // Specific error code
 ==== Comprehensive Error Management
 
 **Memory Error Classification:**
+
 * **Correctable Errors:** Single-bit ECC errors, automatically corrected
 * **Uncorrectable Errors:** Multi-bit errors requiring retry or remapping
 * **Timeout Errors:** Memory operations exceeding configured timeout thresholds
 * **Protocol Errors:** Bus protocol violations or invalid access patterns
 
 **Error Recovery Mechanisms:**
+
 * **Automatic Retry:** Up to 3 retry attempts for transient errors
 * **Bad Block Remapping:** Hardware-assisted remapping for Flash memory failures
 * **Error Logging:** 16-entry error log with timestamp and address information
@@ -727,7 +763,7 @@ input  wire        mem_error_clear;        // Clear error status registers
 * **Active State:** Full performance, all banks active, ~45mW total power
 * **Standby State:** Reduced refresh, data retention, ~15mW power
 * **Sleep State:** Minimal refresh, slow wake-up, ~5mW power
-* **Deep Sleep:** Power-gated with state save, <1mW power
+* **Deep Sleep:** Power-gated with state save, <1 mW power
 
 **Dynamic Power Management:**
 * **Adaptive Bank Power:** Unused memory banks automatically enter low-power mode
@@ -736,8 +772,9 @@ input  wire        mem_error_clear;        // Clear error status registers
 * **Wake-up Optimization:** Predictive wake-up based on access patterns
 
 **Power Management Configuration:**
-* Default Active Timeout: 10ms (no access → standby)
-* Standby to Sleep Timeout: 100ms
+
+* Default Active Timeout: 10 ms (no access → standby)
+* Standby to Sleep Timeout: 100 ms
 * Deep Sleep Entry: Manual control only
 * Wake-up Latency: 4 cycles (standby), 12 cycles (sleep), 50 cycles (deep sleep)
 * Power Savings: 70% (standby), 90% (sleep), 98% (deep sleep)
@@ -746,17 +783,20 @@ input  wire        mem_error_clear;        // Clear error status registers
 ==== Ternary-Optimized Memory Operations
 
 **Ternary Alignment Optimization:**
+
 * **Address Alignment:** All memory operations aligned to 3-byte boundaries where possible
 * **Bank Selection:** 3-way memory interleaving using ternary address encoding
 * **Cache Line Structure:** 288-bit lines optimized for ternary word boundaries (8 × 36-bit words)
 * **ECC Implementation:** Ternary-aware error correction reducing overhead
 
 **VLIW Integration Benefits:**
+
 * **Parallel Memory Access:** VLIW instruction slots can trigger independent memory operations
 * **Prefetch Coordination:** Memory controller coordinates with VLIW instruction fetch patterns
 * **Bandwidth Matching:** Memory bandwidth matched to VLIW execution requirements
 
 **Future Enhancement Opportunities:**
+
 * **Ternary DDR Interface:** Native ternary memory controller for specialized memory devices
 * **Multi-Level Memory:** Integration of ternary-native storage technologies
 * **AI/ML Acceleration:** Memory layout optimized for ternary neural network operations
